--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <nav class="navbar">
+    <nav class="navbar has-shadow">
         <div class="navbar-brand">
 
             <a role="button" class="navbar-burger">
