--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="columns is-centered has-text-centered">
                 <div class="column is-4">
                     <h1 class="title is-2 mb-6">Latest Version</h1>
-                    <div class="box has-background-warning-light">
+                    <div class="box has-background-warning-light" style="min-width:300px;">
                         <h2 class="subtitle is-3 mt-1">Blast Kernel v3</h2>
 
                         <div>
